@@ -88,15 +88,21 @@ class TestABC(unittest.TestCase):
             pass
         b = B()
         self.assertEqual(issubclass(B, A), False)
+        self.assertEqual(issubclass(B, (A,)), False)
         self.assertEqual(isinstance(b, A), False)
+        self.assertEqual(isinstance(b, (A,)), False)
         A.register(B)
         self.assertEqual(issubclass(B, A), True)
+        self.assertEqual(issubclass(B, (A,)), True)
         self.assertEqual(isinstance(b, A), True)
+        self.assertEqual(isinstance(b, (A,)), True)
         class C(B):
             pass
         c = C()
         self.assertEqual(issubclass(C, A), True)
+        self.assertEqual(issubclass(C, (A,)), True)
         self.assertEqual(isinstance(c, A), True)
+        self.assertEqual(isinstance(c, (A,)), True)
 
     def test_isinstance_invalidation(self):
         class A:
@@ -105,20 +111,26 @@ class TestABC(unittest.TestCase):
             pass
         b = B()
         self.assertEqual(isinstance(b, A), False)
+        self.assertEqual(isinstance(b, (A,)), False)
         A.register(B)
         self.assertEqual(isinstance(b, A), True)
+        self.assertEqual(isinstance(b, (A,)), True)
 
     def test_registration_builtins(self):
         class A:
             __metaclass__ = abc.ABCMeta
         A.register(int)
         self.assertEqual(isinstance(42, A), True)
+        self.assertEqual(isinstance(42, (A,)), True)
         self.assertEqual(issubclass(int, A), True)
+        self.assertEqual(issubclass(int, (A,)), True)
         class B(A):
             pass
         B.register(basestring)
         self.assertEqual(isinstance("", A), True)
+        self.assertEqual(isinstance("", (A,)), True)
         self.assertEqual(issubclass(str, A), True)
+        self.assertEqual(issubclass(str, (A,)), True)
 
     def test_registration_edge_cases(self):
         class A:
@@ -141,29 +153,40 @@ class TestABC(unittest.TestCase):
         class A:
             __metaclass__ = abc.ABCMeta
         self.failUnless(issubclass(A, A))
+        self.failUnless(issubclass(A, (A,)))
         class B:
             __metaclass__ = abc.ABCMeta
         self.failIf(issubclass(A, B))
+        self.failIf(issubclass(A, (B,)))
         self.failIf(issubclass(B, A))
+        self.failIf(issubclass(B, (A,)))
         class C:
             __metaclass__ = abc.ABCMeta
         A.register(B)
         class B1(B):
             pass
         self.failUnless(issubclass(B1, A))
+        self.failUnless(issubclass(B1, (A,)))
         class C1(C):
             pass
         B1.register(C1)
         self.failIf(issubclass(C, B))
+        self.failIf(issubclass(C, (B,)))
         self.failIf(issubclass(C, B1))
+        self.failIf(issubclass(C, (B1,)))
         self.failUnless(issubclass(C1, A))
+        self.failUnless(issubclass(C1, (A,)))
         self.failUnless(issubclass(C1, B))
+        self.failUnless(issubclass(C1, (B,)))
         self.failUnless(issubclass(C1, B1))
+        self.failUnless(issubclass(C1, (B1,)))
         C1.register(int)
         class MyInt(int):
             pass
         self.failUnless(issubclass(MyInt, A))
+        self.failUnless(issubclass(MyInt, (A,)))
         self.failUnless(isinstance(42, A))
+        self.failUnless(isinstance(42, (A,)))
 
     def test_all_new_methods_are_called(self):
         class A:
